# mathCA

./: CMakeLists.txt  README.md  main.cpp
head/: ca_datatype.hpp  ca_math.hpp
source/: arra.cpp  arra.h  ca_datatype.cpp  ca_math.cpp  comb.cpp  comb.h  main.cpp  mathext.cpp  mathext.h  ui.cpp  ui.h
